--- a/.env
+++ b/.env
@@ -1,53 +1,51 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:cGj16mB3GAnszlLmv9LY/NMu8uY9yQtaP5jzqKdQzlM=
+APP_KEY=base64:gM/SQrx3eDm1us9rCITXRh+Dz5DYxGpSeMtnbUaoRJY=
 APP_DEBUG=true
 APP_URL=http://localhost
-
 LOG_CHANNEL=stack
-
+LOG_DEPRECATIONS_CHANNEL=null
+LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=ssd_jda_api
 DB_USERNAME=sail
 DB_PASSWORD=password
-
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
+FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=0
-
+SESSION_LIFETIME=120
+MEMCACHED_HOST=memcached
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=mailhog
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
-
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
-
+AWS_USE_PATH_STYLE_ENDPOINT=false
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 WWWGROUP=1000
 WWWUSER=1000
-
-SESSION_DOMAIN=10.91.100.145
-
-PHP_CLI_SERVER_WORKERS=5
